<resources>
    <string name="app_name">PsychAI</string>
    <string name="welcome_to">Welcome to</string>
    <string name="psychai">PsychAI</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome!</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="your_full_name">Your Full name</string>
    <string name="your_email">Your Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome_to_psychai">Welcome to PsychAI</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_name">Type your name</string>
</resources>